ENT-6914 - Upgrading to JDK 17 and Kotlin 1.9